# FastAPI

./: Dockerfile  alembic.ini  blog.db  chat.html  docker-compose.yml  eventbrite_api.py  main.py  pyproject.toml  requirments.txt  subhan.py
blog/: database.py  hashing.py  main.py  models.py  oauth2.py  schemas.py  token.py
blog/repository/: blog.py  user.py
blog/routers/: authentication.py  blog.py  user.py
fastapi_practice/cores/: config.py  database.py  eventbrite_api.py  minio_client.py  models.py  oauth2.py  redis1.py  schemas.py  token.py
fastapi_practice/repository/: blog.py  eventbrite_api.py  user.py
fastapi_practice/routers/: authentication.py  blog.py  eventbrite.py  sockets.py  user.py
migrations/: env.py
migrations/versions/: 0204807a17ed_adding_column_in_user_table.py  1ae2390553e2_delete_column_age.py  2cc9d60ad351_deleting_column_from_user_table.py  330302802914_drop_column_age_in_user_table.py  63b2b164f667_change_column_name.py  6aa2c52fe99a_change_chat_table.py  879aad8629ab_initial_migration.py  9b562b9c44a0_change_sender_id_to_user_id.py  ba65c08fba2e_add_column_age_in_user_table.py  c09be1ca9655_add_column_in_user_table.py  fca5dc5e4cc9_rename_column_name_email.py
