[project]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhan Zahoor",email = "2024n15330@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "environ (>=1.0,<2.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_practice", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
