[project]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhan Zahoor",email = "2024n15330@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "environ (>=1.0,<2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_practice", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
